--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </section>
         <!-- changed element from "div" to "section" -->
         <section id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="table full of people on each of their mobile devices using varioius social media services" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -62,7 +62,7 @@
         <!-- changed element from "div" to "section" -->
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="a gear representing work funneling into money" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -70,7 +70,7 @@
         <!-- changed element from "div" to "section" -->
         <section class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="a man with a lightbulb for a head" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -78,19 +78,19 @@
         <!-- changed element from "div" to "section" -->
         <section class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="a large gear with various dollar signs surrounding it" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </section>
     </aside>
-    <!-- changed element tag from "body" to "footer" -->
-    <footer class="footer">
+    <!-- changed element tag from "body" to "footer" and hid the section as it is hidden in the mock-up image-->
+    <!-- <footer class="footer">
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
